--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "arr",
         "array"
     ],
-    "homepage": "https://www.bitbucket.org/a-pp-zz/arr.git",
+    "homepage": "https://github.com/a-pp-zz/arr",
     "license": "MIT",
     "authors": [
         {
